--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "demo1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "root.js",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "webpack-dev-server --inline --hot",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
@@ -12,12 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^2.13.7",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
+    "css-loader": "^0.28.7",
+    "json-loader": "^0.5.7",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-mixin": "^4.0.0",
+    "react-router": "^4.2.0",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
   }
