--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-mixin": "^4.0.0",
+    "react-responsive": "^3.0.0",
     "react-router": "^4.2.0",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
