--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
     "css-loader": "^0.28.7",
+    "fetch": "^1.1.0",
     "json-loader": "^0.5.7",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
