--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-mixin": "^4.0.0",
     "react-responsive": "^3.0.0",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
